# sequoia

./: .ghci.repl  .hlint.yaml  README.md  cabal.project  focalized.cabal  hie.yaml  sequoia.cabal
script/: ghci-flags  ghci-flags-dependencies
src/Focalized/: B.hs  Bottom.hs  CPS.hs  Calculus.hs  Conjunction.hs  Connective.hs  Continuation.hs  Disjunction.hs  Down.hs  Exists.hs  FOL.hs  Falsity.hs  ForAll.hs  Function.hs  HOAS.hs  Implication.hs  Mu.hs  Multiset.hs  Negate.hs  Negation.hs  Not.hs  Nu.hs  One.hs  Par.hs  Polarity.hs  Polarized.hs  Printer.hs  Proof.hs  Quantification.hs  Quantifier.hs  Recursion.hs  Sequent.hs  Snoc.hs  Subtraction.hs  Sum.hs  Tensor.hs  Top.hs  Truth.hs  Up.hs  With.hs  (+1 more)
src/Focalized/Calculus/: Additive.hs  Bottom.hs  Conjunction.hs  Context.hs  Control.hs  Core.hs  Disjunction.hs  Down.hs  Exists.hs  Falsity.hs  ForAll.hs  Function.hs  Iff.hs  Implication.hs  Implicative.hs  Mu.hs  Multiplicative.hs  Negate.hs  Negation.hs  Not.hs  Nu.hs  One.hs  Par.hs  Quantification.hs  Quantifier.hs  Recursion.hs  Recursive.hs  Shift.hs  Subtraction.hs  Sum.hs  Tensor.hs  Top.hs  Truth.hs  Up.hs  With.hs  XOr.hs  Zero.hs
src/Focalized/Connective/: Bottom.hs  Down.hs  Exists.hs  ForAll.hs  Function.hs  Iff.hs  Mu.hs  Negate.hs  Negation.hs  Not.hs  Nu.hs  One.hs  Par.hs  Quantification.hs  Subtraction.hs  Sum.hs  Tensor.hs  Top.hs  Up.hs  With.hs  XOr.hs  Zero.hs
src/Focalized/Functor/: C.hs  I.hs
src/Focalized/Snoc/: NonEmpty.hs
src/Sequoia/: Biadjunction.hs  Bicontravariant.hs  Bidistributive.hs  Bijection.hs  Birepresentable.hs  CPS.hs  Calculus.hs  Confunctor.hs  Conjunction.hs  Cons.hs  Context.hs  Contextual.hs  Continuation.hs  DeBruijn.hs  Disjunction.hs  EPS.hs  Interpreter.hs  Lambda.hs  Line.hs  List.hs  Nulladjunction.hs  Polarity.hs  Printer.hs  Profunctor.hs  Sequent.hs  Signal.hs  Snoc.hs  Span.hs  Spine.hs  Syntax.hs  Value.hs
src/Sequoia/Bifunctor/: Join.hs  Product.hs  Sum.hs
src/Sequoia/Calculus/: Additive.hs  Assertion.hs  Bottom.hs  Context.hs  Control.hs  Core.hs  Down.hs  Exists.hs  ForAll.hs  Function.hs  Iff.hs  Implicative.hs  Mu.hs  Multiplicative.hs  Negate.hs  Negation.hs  Not.hs  NotUntrue.hs  Nu.hs  One.hs  Par.hs  Quantification.hs  Recursive.hs  Shift.hs  Structural.hs  Subtraction.hs  Sum.hs  Tensor.hs  Top.hs  True.hs  Up.hs  With.hs  XOr.hs  Yes.hs  Zero.hs
src/Sequoia/Connective/: Additive.hs  Assertion.hs  Bottom.hs  Down.hs  Exists.hs  Final.hs  ForAll.hs  Function.hs  Iff.hs  Implicative.hs  Initial.hs  Mu.hs  Multiplicative.hs  Negate.hs  Negation.hs  Not.hs  NotUntrue.hs  Nu.hs  One.hs  Par.hs  Quantification.hs  Shift.hs  Subtraction.hs  Sum.hs  Tensor.hs  Top.hs  True.hs  Up.hs  With.hs  XOr.hs  Zero.hs
src/Sequoia/Connective/Multiplicative/: Unit.hs
src/Sequoia/Connective/Par/: Parameterized.hs
src/Sequoia/DeBruijn/: Typed.hs
src/Sequoia/Functor/: Applicative.hs  C.hs  Con.hs  Continuation.hs  CorepRep.hs  Cov.hs  Ex.hs  I.hs  In.hs  K.hs  Sink.hs  Source.hs  V.hs  Value.hs
src/Sequoia/Functor/Sink/: Internal.hs
src/Sequoia/Functor/Snk/: Internal.hs
src/Sequoia/Functor/Source/: Internal.hs
src/Sequoia/Interpreter/: Typed.hs
src/Sequoia/List/: Diff.hs
src/Sequoia/Monad/: It.hs  Run.hs
src/Sequoia/Monad/Trans/: It.hs
src/Sequoia/Optic/: Getter.hs  Iso.hs  Lens.hs  Optic.hs  Prism.hs  Review.hs  Setter.hs  Traversal.hs
src/Sequoia/Print/: Class.hs  Doc.hs  Prec.hs  Printer.hs  Sequent.hs
src/Sequoia/Printer/: Sequent.hs
src/Sequoia/Profunctor/: Adjunction.hs  Applicative.hs  Coexponential.hs  Command.hs  Context.hs  Continuation.hs  ControlPassing.hs  D.hs  Diagonal.hs  Exchange.hs  Exp.hs  Exponential.hs  Forget.hs  K.hs  Product.hs  Recall.hs  Semiring.hs  Sum.hs  V.hs  Value.hs
src/Sequoia/Profunctor/Exp/: Class.hs  Par.hs  Quantified.hs  Void.hs
test/: Test.hs
test/Cons/: Test.hs
test/Focalized/Multiset/: Test.hs
test/Line/: Test.hs
test/Sequoia/Cons/: Test.hs
test/Sequoia/Line/: Test.hs
test/Sequoia/List/: Test.hs
