cabal-version:      2.4
name:               focalized
version:            0.0.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
-- license-file:       LICENSE
author:             Rob Rix
maintainer:         rob.rix@me.com

-- A copyright notice.
-- copyright:
category:           Language
-- extra-source-files: CHANGELOG.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  default-extensions:
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    RankNTypes
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

library
  import: common
  exposed-modules:
    Focalized.B
    Focalized.Bottom
    Focalized.Calculus
    Focalized.Calculus.Bottom
    Focalized.Calculus.Context
    Focalized.Calculus.Control
    Focalized.Calculus.Core
    Focalized.Calculus.Exists
    Focalized.Calculus.ForAll
    Focalized.Calculus.Function
    Focalized.Calculus.Mu
    Focalized.Calculus.Negate
    Focalized.Calculus.Negation
    Focalized.Calculus.Not
    Focalized.Calculus.Nu
    Focalized.Calculus.One
    Focalized.Calculus.Par
    Focalized.Calculus.Shift
    Focalized.Calculus.Subtraction
    Focalized.Calculus.Sum
    Focalized.Calculus.Tensor
    Focalized.Calculus.Top
    Focalized.Calculus.With
    Focalized.Calculus.Zero
    Focalized.Conjunction
    Focalized.Connective
    Focalized.CPS
    Focalized.Disjunction
    Focalized.Down
    Focalized.Exists
    Focalized.ForAll
    Focalized.Functor.C
    Focalized.HOAS
    Focalized.Implication
    Focalized.Mu
    Focalized.Multiset
    Focalized.Negate
    Focalized.Negation
    Focalized.Not
    Focalized.Nu
    Focalized.One
    Focalized.Par
    Focalized.Polarity
    Focalized.Polarized
    Focalized.Quantification
    Focalized.Recursion
    Focalized.Snoc
    Focalized.Snoc.NonEmpty
    Focalized.Sum
    Focalized.Tensor
    Focalized.Top
    Focalized.Up
    Focalized.With
    Focalized.Zero

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base ^>=4.14.1.0
    , containers
    , fused-effects
    , profunctors
    , transformers
  hs-source-dirs:   src


test-suite test
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  other-modules:
    Focalized.Multiset.Test
  main-is: Test.hs
  build-depends:
    , base
    , focalized
    , hedgehog ^>= 1
