cabal-version:      2.4
name:               sequoia
version:            0.0.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
-- license-file:       LICENSE
author:             Rob Rix
maintainer:         rob.rix@me.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: README.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  default-extensions:
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoStarIsType
    RankNTypes
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

library
  import: common
  exposed-modules:
    Sequoia.Bijection
    Sequoia.Calculus
    Sequoia.Calculus.Additive
    Sequoia.Calculus.Assertion
    Sequoia.Calculus.Bottom
    Sequoia.Calculus.Context
    Sequoia.Calculus.Control
    Sequoia.Calculus.Core
    Sequoia.Calculus.Down
    Sequoia.Calculus.Exists
    Sequoia.Calculus.ForAll
    Sequoia.Calculus.Function
    Sequoia.Calculus.Iff
    Sequoia.Calculus.Implicative
    Sequoia.Calculus.Mu
    Sequoia.Calculus.Multiplicative
    Sequoia.Calculus.Negate
    Sequoia.Calculus.Negation
    Sequoia.Calculus.Not
    Sequoia.Calculus.Nu
    Sequoia.Calculus.One
    Sequoia.Calculus.Par
    Sequoia.Calculus.Quantification
    Sequoia.Calculus.Recursive
    Sequoia.Calculus.Shift
    Sequoia.Calculus.Structural
    Sequoia.Calculus.Subtraction
    Sequoia.Calculus.Sum
    Sequoia.Calculus.Tensor
    Sequoia.Calculus.Top
    Sequoia.Calculus.Up
    Sequoia.Calculus.With
    Sequoia.Calculus.XOr
    Sequoia.Calculus.Yes
    Sequoia.Calculus.Zero
    Sequoia.Confunctor
    Sequoia.Conjunction
    Sequoia.Connective.Additive
    Sequoia.Connective.Assertion
    Sequoia.Connective.Bottom
    Sequoia.Connective.Down
    Sequoia.Connective.Exists
    Sequoia.Connective.ForAll
    Sequoia.Connective.Function
    Sequoia.Connective.Iff
    Sequoia.Connective.Implicative
    Sequoia.Connective.Mu
    Sequoia.Connective.Multiplicative
    Sequoia.Connective.Negate
    Sequoia.Connective.Negation
    Sequoia.Connective.Not
    Sequoia.Connective.Nu
    Sequoia.Connective.One
    Sequoia.Connective.Par
    Sequoia.Connective.Quantification
    Sequoia.Connective.Shift
    Sequoia.Connective.Subtraction
    Sequoia.Connective.Sum
    Sequoia.Connective.Tensor
    Sequoia.Connective.Top
    Sequoia.Connective.Up
    Sequoia.Connective.With
    Sequoia.Connective.XOr
    Sequoia.Connective.Zero
    Sequoia.Contextual
    Sequoia.Continuation
    Sequoia.Disjunction
    Sequoia.Functor.Applicative
    Sequoia.Functor.C
    Sequoia.Functor.Con
    Sequoia.Functor.Cov
    Sequoia.Functor.I
    Sequoia.Functor.K
    Sequoia.Functor.V
    Sequoia.Lambda
    Sequoia.Polarity
    Sequoia.Printer
    Sequoia.Profunctor.Adjunction
    Sequoia.Profunctor.Applicative
    Sequoia.Profunctor.ControlPassing
    Sequoia.Profunctor.Diagonal
    Sequoia.Profunctor.K
    Sequoia.Profunctor.Product
    Sequoia.Profunctor.Sum
    Sequoia.Profunctor.V
    Sequoia.Sequent
    Sequoia.Signal
    Sequoia.Value

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , adjunctions
    , base ^>=4.14.1.0
    , comonad
    , distributive
    , profunctors
    , transformers
  hs-source-dirs:   src


test-suite test
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  build-depends:
    , base
    , hedgehog ^>= 1
