cabal-version:      2.4
name:               sequoia
version:            0.0.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
-- license-file:       LICENSE
author:             Rob Rix
maintainer:         rob.rix@me.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: README.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  default-extensions:
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoStarIsType
    RankNTypes
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

library
  import: common
  exposed-modules:
    Sequoia.Biadjunction
    Sequoia.Bicontravariant
    Sequoia.Bidistributive
    Sequoia.Bifunctor.Join
    Sequoia.Bifunctor.Product
    Sequoia.Bifunctor.Sum
    Sequoia.Birepresentable
    Sequoia.Calculus.Additive
    Sequoia.Calculus.Assertion
    Sequoia.Calculus.Bottom
    Sequoia.Calculus.Context
    Sequoia.Calculus.Control
    Sequoia.Calculus.Core
    Sequoia.Calculus.Down
    Sequoia.Calculus.Exists
    Sequoia.Calculus.ForAll
    Sequoia.Calculus.Function
    Sequoia.Calculus.Iff
    Sequoia.Calculus.Implicative
    Sequoia.Calculus.Mu
    Sequoia.Calculus.Multiplicative
    Sequoia.Calculus.Negate
    Sequoia.Calculus.Negation
    Sequoia.Calculus.Not
    Sequoia.Calculus.NotUntrue
    Sequoia.Calculus.Nu
    Sequoia.Calculus.One
    Sequoia.Calculus.Par
    Sequoia.Calculus.Quantification
    Sequoia.Calculus.Recursive
    Sequoia.Calculus.Shift
    Sequoia.Calculus.Structural
    Sequoia.Calculus.Subtraction
    Sequoia.Calculus.Sum
    Sequoia.Calculus.Tensor
    Sequoia.Calculus.Top
    Sequoia.Calculus.True
    Sequoia.Calculus.Up
    Sequoia.Calculus.With
    Sequoia.Calculus.XOr
    Sequoia.Calculus.Zero
    Sequoia.Confunctor
    Sequoia.Conjunction
    Sequoia.Connective.Additive
    Sequoia.Connective.Assertion
    Sequoia.Connective.Bottom
    Sequoia.Connective.Down
    Sequoia.Connective.Exists
    Sequoia.Connective.Final
    Sequoia.Connective.ForAll
    Sequoia.Connective.Function
    Sequoia.Connective.Iff
    Sequoia.Connective.Implicative
    Sequoia.Connective.Initial
    Sequoia.Connective.Mu
    Sequoia.Connective.Multiplicative
    Sequoia.Connective.Negate
    Sequoia.Connective.Negation
    Sequoia.Connective.Not
    Sequoia.Connective.NotUntrue
    Sequoia.Connective.Nu
    Sequoia.Connective.One
    Sequoia.Connective.Par
    Sequoia.Connective.Quantification
    Sequoia.Connective.Shift
    Sequoia.Connective.Subtraction
    Sequoia.Connective.Sum
    Sequoia.Connective.Tensor
    Sequoia.Connective.Top
    Sequoia.Connective.True
    Sequoia.Connective.Up
    Sequoia.Connective.With
    Sequoia.Connective.XOr
    Sequoia.Connective.Zero
    Sequoia.Cons
    Sequoia.Contextual
    Sequoia.Disjunction
    Sequoia.Functor.Applicative
    Sequoia.Functor.C
    Sequoia.Functor.Con
    Sequoia.Functor.Cov
    Sequoia.Functor.I
    Sequoia.Functor.Sink
    Sequoia.Functor.Sink.Internal
    Sequoia.Functor.Source
    Sequoia.Functor.Source.Internal
    Sequoia.Lambda
    Sequoia.Line
    Sequoia.Monad.It
    Sequoia.Monad.Run
    Sequoia.Monad.Trans.It
    Sequoia.Nulladjunction
    Sequoia.Polarity
    Sequoia.Print.Class
    Sequoia.Print.Doc
    Sequoia.Print.Prec
    Sequoia.Print.Printer
    Sequoia.Print.Sequent
    Sequoia.Profunctor
    Sequoia.Profunctor.Adjunction
    Sequoia.Profunctor.Applicative
    Sequoia.Profunctor.Coexponential
    Sequoia.Profunctor.Context
    Sequoia.Profunctor.Continuation
    Sequoia.Profunctor.Diagonal
    Sequoia.Profunctor.Exchange
    Sequoia.Profunctor.Exp
    Sequoia.Profunctor.Exp.Class
    Sequoia.Profunctor.Exp.Par
    Sequoia.Profunctor.Exp.Quantified
    Sequoia.Profunctor.Exp.Void
    Sequoia.Profunctor.Exponential
    Sequoia.Profunctor.Product
    Sequoia.Profunctor.Recall
    Sequoia.Profunctor.Semiring
    Sequoia.Profunctor.Sum
    Sequoia.Profunctor.Value
    Sequoia.Sequent
    Sequoia.Signal
    Sequoia.Span
    Sequoia.Syntax

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , adjunctions
    , base ^>=4.14.1.0
    , comonad
    , distributive
    , fresnel
    , fused-effects
    , profunctors
    , semialign
    , these
    , transformers
  hs-source-dirs:   src


test-suite test
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  other-modules:
    Cons.Test
    Line.Test
  build-depends:
    , base
    , hedgehog ^>= 1
    , sequoia
